--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -99,6 +99,41 @@ body {
   padding-left: 200px;
 }
 
-.fixed-content2 {
-  color: black;
+.iphone11-pro img {
+  position: relative;
+  aspect-ratio: 2;
+}
+
+.second-fixed-container {
+  z-index: 1000;
+  top: 1500px;
+  left: 400px;
+  position: absolute;
+  color: rgb(10, 2, 2);
+  margin-top: 0%;
+  padding-top: 0%;
+}
+
+.iphone-11-2 {
+  font-size: 60px;
+  font-weight: bold;
+  padding-left: 70px;
+  margin: 10px;
+}
+
+.the-right {
+  text-align: center;
+  font-size: xx-large;
+}
+
+.currencies {
+  color: grey;
+  margin-top: 10px;
+  font-size: large;
+  padding-left: 80px;
+}
+
+.thired-link {
+  margin-top: 10px;
+  padding-left: 130px;
 }
