--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -135,3 +135,37 @@ body {
   margin-top: 10px;
   padding-left: 130px;
 }
+
+.watch-and-card {
+  display: flex;
+  position: absolute;
+}
+
+.watch-and-card img {
+  max-width: 50%;
+  padding-left: 20px;
+  padding-top: 15px;
+  aspect-ratio: 1;
+}
+
+.watch-series5-logo img {
+  top: 100px;
+  left: 250px;
+  width: 150px;
+  position: relative;
+}
+
+.watch-series-text {
+  top: 110px;
+  left: 120px;
+  position: relative;
+}
+
+.watch-prom p {
+  padding-left: 15px;
+}
+
+.watch-link {
+  margin-top: 10px;
+  padding-left: 40px;
+}
