--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -156,8 +156,7 @@ body {
 }
 
 .watch-series-text {
-  top: 110px;
-  left: 120px;
+  top: 180px;
   position: relative;
 }
 
@@ -168,4 +167,38 @@ body {
 .watch-link {
   margin-top: 10px;
   padding-left: 40px;
+}
+
+.apple-card-logo {
+  padding: 0%;
+  margin-top: 0%;
+}
+
+.apple-card-logo img {
+  top: -12px;
+  left: 900px;
+  width: 130px;
+  position: relative;
+}
+
+.on-watch-pharagraph {
+  display: flex;
+}
+
+.on-card-pharagraph {
+  position: relative;
+}
+
+.card-text {
+  left: 800px;
+  position: relative;
+}
+
+.apple-card {
+  padding-left: 70px;
+}
+
+.card-link {
+  margin-top: 30px;
+  padding-left: 880px;
 }
