--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -1,7 +1,7 @@
 * {
   padding: 0%;
   margin: 0%;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -9,19 +9,42 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-.header-conrainer ul li {
-  display: inline;
-  padding: 2% 5%;
+.header-conrainer {
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
   background-color: black;
 }
-
-.header-conrainer ul li a {
-  text-decoration: none;
-  color: white;
+.header-conrainer li {
+  display: inline;
+  background-color: black;
+  padding-right: 50px;
 }
 
-.apple-logo a {
-  background-color: aliceblue;
+.header-conrainer a {
+  text-decoration: none;
+  color: white;
+  padding-right: 20px;
+  font-size: smaller;
+  color: grey;
+}
+
+.header-conrainer a:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.apple-logo img {
+  height: 30px;
+  margin-left: 90px;
+}
+
+.search-icon img {
+  height: 20px;
+}
+
+.cart-icon img {
+  height: 20px;
 }
 
 .hero-section {
