--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -78,21 +78,21 @@ body {
 }
 
 .iphone11-pro-bg img {
-  width: 1270px;
-  aspect-ratio: 2;
   position: relative;
+  height: 100vh;
+  width: 100%;
 }
 
 .fixed-content {
   z-index: 1000;
-  top: 800px;
+  top: 760px;
   left: 350px;
   position: absolute;
   color: white;
 }
 
 .iphone-11 {
-  font-size: 60px;
+  font-size: 50px;
   font-weight: bold;
   padding-left: 80px;
   margin: 10px;
@@ -100,7 +100,7 @@ body {
 
 .the-pros {
   text-align: center;
-  font-size: xx-large;
+  font-size: 30px;
 }
 
 .currency {
