--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -162,18 +162,17 @@ body {
   max-width: 50%;
   padding-left: 20px;
   padding-top: 15px;
-  aspect-ratio: 1;
+  height: 100vh;
 }
 
 .watch-series5-logo img {
-  top: 100px;
+  top: 80px;
   left: 250px;
-  width: 150px;
   position: relative;
 }
 
 .watch-series-text {
-  top: 180px;
+  top: 150px;
   position: relative;
 }
 
@@ -193,8 +192,7 @@ body {
 
 .apple-card-logo img {
   top: -12px;
-  left: 900px;
-  width: 130px;
+  left: 850px;
   position: relative;
 }
 
