--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -22,6 +22,50 @@
   font-size: 18px;
 }
 
+.navigation-links ul li a:hover {
+  color: white;
+}
+
 .navigation-links ul li img {
   height: 18px;
+}
+
+/* hero-section */
+.hero-section {
+  background-color: rgb(248, 250, 251);
+}
+.MacBook-img img {
+  width: 900px;
+  align-items: center;
+  padding-left: 370px;
+}
+
+.inch,
+.MacBook,
+.brightest,
+.more-and-buy-links {
+  text-align: center;
+}
+
+.more-and-buy-links ul li a {
+  text-decoration: none;
+  color: rgb(38, 77, 218);
+}
+
+.more-and-buy-links ul li {
+  display: inline;
+  padding: 20px;
+}
+
+.inch {
+  font-size: 18px;
+  padding-top: 10px;
+}
+.MacBook {
+  font-size: 56px;
+  font-weight: bold;
+}
+
+.brightest {
+  font-size: 56px;
 }
