--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -240,3 +240,48 @@
   font-size: 25px;
   padding-bottom: 20px;
 }
+
+/* section for macBook and iPad */
+.macBook-and-ipad-section {
+  display: flex;
+  padding: 10px;
+  gap: 10px;
+  padding-top: 5px;
+}
+
+.macbook-section {
+  background-image: url('../images/home/mac-laptop.jpg');
+  width: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgb(248, 250, 251);
+  background-position: bottom;
+  background-size: 500px;
+}
+
+.ipad-section {
+  background-image: url('../images/home/new-ipad.jpg');
+  height: 580px;
+  width: 50%;
+  background-position: center;
+}
+
+.inch2,
+.MacBook2,
+.brightest2 {
+  text-align: center;
+}
+
+.inch2 {
+  font-size: 20px;
+  padding-top: 35px;
+}
+.MacBook2 {
+  font-size: 46px;
+  font-weight: bold;
+}
+
+.brightest2 {
+  font-size: 36px;
+  padding-bottom: 30px;
+}
