--- a/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
+++ b/Phase 1/Week-4/appleProject/appleHome/sprint1/CSS/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body {
+  font-size: 13px;
+  font-family: 'Montserrat', sans-serif;
+}
+
 /* navigation style */
 .navigation {
   background-color: black;
@@ -297,4 +302,100 @@
   text-align: center;
   font-size: 25px;
   padding-bottom: 15px;
+}
+
+/* footer section */
+.footer-section-container {
+  background-color: #f5f5f7;
+  padding-bottom: 35px;
+}
+
+.footer-paragraph {
+  padding: 20px 150px 0px;
+  color: gray;
+}
+
+.link-in-paragraph {
+  color: black;
+  text-decoration: none;
+}
+
+hr {
+  margin: 150px;
+  margin-top: 20px;
+  color: gray;
+  margin-bottom: 20px;
+}
+
+.Shop-and-Learn {
+  margin-left: 150px;
+}
+
+.different-links-list {
+  display: flex;
+  gap: 65px;
+}
+
+.more-way-to-shop {
+  margin-left: 150px;
+  margin-top: 30px;
+}
+
+.copyright-section {
+  display: flex;
+  margin-left: 150px;
+  gap: 50px;
+}
+
+.footer-links-terms ul,
+.footer-country {
+  display: flex;
+  gap: 5px;
+}
+
+.Shop-and-Learn h3,
+.Services h3,
+.apple-store h3,
+.Business h3,
+.values h3 {
+  font-size: 14px;
+  color: rgb(60, 58, 58);
+}
+
+.Shop-and-Learn ul li a,
+.Services ul li a,
+.apple-store ul li a,
+.Business ul li a,
+.values ul li a,
+.footer-links-terms ul li a {
+  text-decoration: none;
+  color: gray;
+  gap: 10px;
+}
+
+.Shop-and-Learn ul li,
+.Services ul li,
+.apple-store ul li,
+.Business ul li,
+.values ul li,
+.footer-links-terms ul li {
+  list-style-type: none;
+}
+
+.Services ul,
+.Services ul,
+.apple-store ul,
+.Business ul,
+.values ul {
+  margin-bottom: 20px;
+}
+
+.Shop-and-Learn ul li a:hover,
+.Services ul li a:hover,
+.apple-store ul li a:hover,
+.Business ul li a:hover,
+.values ul li a:hover,
+.footer-links-terms ul li a:hover,
+.footer-paragraph a:hover {
+  text-decoration: underline;
 }
