--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/css/styles.css
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/css/styles.css
@@ -1,6 +1,6 @@
 /* General Styling*/
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 a {
   color: #06c;
@@ -117,8 +117,8 @@ img {
     border-bottom: 1px solid #ccc;
   }
   .footer-links-wrapper h3:after {
-    font-family: "FontAwesome";
-    content: "\f067";
+    font-family: 'FontAwesome';
+    content: '\f067';
     padding-left: 10px;
     position: absolute;
     right: 25px;
@@ -147,4 +147,44 @@ img {
   .footer-links-terms {
     margin-top: 10px;
   }
+}
+
+/* two links */
+.more-and-buy-links ul li a {
+  text-decoration: none;
+  color: rgb(38, 77, 218);
+}
+
+.more-and-buy-links ul li a:hover {
+  color: black;
+}
+
+.more-and-buy-links ul li {
+  display: inline;
+  padding: 20px;
+  font-size: 20px;
+}
+/* hero background */
+.hero-section {
+  background-color: rgb(248, 250, 251);
+}
+
+/* iphone 11 pro section */
+.iphone-11-pro-container {
+  background-image: url('../images/home/iphone11-pro-bg.jpg');
+}
+
+/* height and center for background images */
+.heigt-and-center {
+  background-position: center;
+  height: 580px;
+}
+
+/* paddings */
+.iphone-11-pro {
+  padding-top: 60px;
+}
+
+.pro-texts {
+  padding: 5px;
 }
