added style for card and watch section

--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/css/styles.css
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/css/styles.css
@@ -205,3 +205,14 @@ img {
 .iphone-11-currencies {
   margin-bottom: 20px;
 }
+
+/* watch and card section */
+.watch-section {
+  background-image: url('../images/home/watch-series-5.jpg');
+  width: 50%;
+}
+
+.card-section {
+  background-image: url('../images/home/apple-card.jpg');
+  width: 50%;
+}
