--- a/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/css/styles.css
+++ b/Phase 1/Week-6/AppleBootstrapProject/Project/apple-responsive-staring-base-code/css/styles.css
@@ -256,3 +256,18 @@ img {
   text-decoration: none;
   font-size: 20px;
 }
+
+/* mac and ipad section */
+.macbook-section {
+  background-image: url('../images/home/mac-laptop.jpg');
+  width: 50%;
+  background-repeat: no-repeat;
+  background-color: rgb(248, 250, 251);
+  background-position: bottom;
+  background-size: 500px;
+}
+
+.ipad-section {
+  background-image: url('../images/home/new-ipad.jpg');
+  width: 50%;
+}
